kubernetes/apps/default/jellyfin/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "jellyfin"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
          rules:
            http:
              - path: "^/(?!metrics).*"
